# CMUNeXT_TVessel_Segmentation

./: README.md  grapher.py  observations.md  parser.py  plan.md  pyproject.toml  run_segmentation.py  sota_metrics.csv  sota_results.txt  vanilla_metrics.csv  vanilla_results.txt
scripts/: run_sota_vessel.py  run_vanilla_cmunext.py
sota_training/: README.md  sota_train.ipynb  sota_vessel_training_colab.ipynb
src/research_formal/: __init__.py
src/research_formal/models/: __init__.py  cmunext.py  sota_unetpp.py
src/research_formal/pipelines/: __init__.py  sota_vessel.py  vanilla_cmunext.py
src/research_formal/training/: __init__.py  datasets.py  losses.py  metrics.py
tests/: test_cmunext_forward.py  test_sota_pipeline_import.py
vanilla_training/: README.md  vanilla_cmunext_training_colab.ipynb  vanilla_train.ipynb
